traefik/whoiam/whoiam-service.yml
--- # whoami内部网络转发 到 labels带有app=whoami的pod
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
