traefik/whoiam/whoiam-ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec: # https tls
  entryPoints:
    - websecure # traefik-deployments --entrypoints.websecure.Address=:4443
  routes: # your.example.comurl/notls  your.example.com/notls/abc whoamiserviceservice8080pod
  - match: Host(`your.example.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls: # tls traefik-deployments --certificatesresolvers.myresolver.acme.tlschallenge ...
    certResolver: myresolver
